Fix alignment and margin for nav links

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 nav a {
-  alignment: top;
   position: center;
   padding:0px;
-  margin-left:20px;
+  margin-left:0px;
   margin-right:10px;
   
 }
